<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_launcher"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="#ffffffff"
            android:orientation="vertical">


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_card"

                android:hint="@string/contact_firstname"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconPadding="0dp" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etOtherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_card"

                android:hint="@string/contact_othername"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconPadding="0dp" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etDesignation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_card"

                android:hint="@string/designation"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconPadding="0dp" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etCellphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_card"
                android:hint="@string/cellphone"

                android:inputType="phone"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconPadding="0dp" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_card"

                android:hint="@string/address"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconPadding="0dp" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etEmail"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_card"

                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconPadding="0dp" />

            <Button
                android:id="@+id/btSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/save_profile"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:max="100"
        android:visibility="invisible" />

</RelativeLayout>