<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_launcher"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/lead_type"
                android:textSize="@dimen/text_size_medium" />

            <Spinner
                android:id="@+id/spLeadType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_card"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/product_type"
                android:textSize="@dimen/text_size_medium" />

            <Spinner
                android:id="@+id/spProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_card"
                android:textSize="@dimen/text_size_large" />


            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_card"

                android:hint="@string/full_name"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconPadding="0dp" />

            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/etBranch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_card"

                android:hint="@string/nearest_branch"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium" />


            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/etTelephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_card"

                android:hint="@string/telephone"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconPadding="0dp"
                android:inputType="number" />


            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_card"

                android:hint="@string/address"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconPadding="0dp" />


            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/etComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_card"

                android:hint="@string/comments"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconPadding="0dp" />

            <Button
                android:id="@+id/btSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:text="SAVE"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:max="100"
        android:visibility="gone" />


</android.support.design.widget.CoordinatorLayout>