<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_barclays_bird" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_username"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconLeft="@drawable/ic_username"
                app:met_iconPadding="0dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"

                android:hint="@string/hint_password"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="@dimen/text_size_medium"
                app:met_iconLeft="@drawable/ic_password"
                app:met_iconPadding="0dp"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btLogin"
                style="@style/Material.Drawable.Ripple.Touch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:background="@drawable/background_button"
                android:text="@string/login"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:max="100"
        android:visibility="invisible" />

</android.support.design.widget.CoordinatorLayout>
