<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_launcher"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">




        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/device_type"
                    android:textSize="@dimen/text_size_medium" />

                <Spinner
                    android:id="@+id/spDeviceType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_card"
                    android:textSize="@dimen/text_size_large" />



                <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                    android:id="@+id/etMerchant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/background_card"
                    android:hint="@string/merchant"
                    android:textSize="@dimen/text_size_medium"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:et_labelTextColor="@color/black"
                    app:met_floatingLabelTextSize="@dimen/text_size_medium"

                    app:met_iconPadding="0dp" />
                />

                <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/background_card"
                    android:hint="@string/merchant_location"
                    android:textSize="@dimen/text_size_medium"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="@dimen/text_size_medium"

                    app:met_iconPadding="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal|right"
                    android:orientation="horizontal"

                    android:layout_marginBottom="10dp"
                    android:weightSum="1">


                    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                        android:id="@+id/etIssue"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:background="@drawable/background_card"

                        android:hint="@string/issue"
                        app:met_clearButton="true"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelTextSize="@dimen/text_size_medium"
                        app:met_iconPadding="0dp"
                        android:layout_gravity="bottom"
                        />

                    <ImageView
                        android:id="@+id/imgPhoto"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:src="@drawable/photo"
                        android:layout_marginBottom="5dp" />
                </LinearLayout>

                <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                    android:id="@+id/etIssueOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_card"

                    android:hint="Issue Other"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="@dimen/text_size_medium"
                    app:met_iconPadding="0dp" />

                <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                    android:id="@+id/etSerialNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_card"

                    android:hint="Serial Number"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="@dimen/text_size_medium"
                    app:met_iconPadding="0dp" />


                <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                    android:id="@+id/etComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_card"

                    android:hint="@string/comments"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="@dimen/text_size_medium"
                    app:met_iconPadding="0dp" />



                <Button
                    android:id="@+id/btSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@drawable/background_button"
                    android:text="SAVE"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large" />
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:max="100"
            android:visibility="invisible" />





</android.support.design.widget.CoordinatorLayout>